--- a/src/components/CTAPage.astro
+++ b/src/components/CTAPage.astro
@@ -14,7 +14,7 @@
             <p>Ready </p>
             <p>For your Success</p>
             <p>Journey ?</p>
-            <div class="mt-24 contact-button text-sm text-center py-4 px-5 bg-[#f9fc50] rounded-full w-fit hover:bg-black hover:text-white transition-all duration-300 ">Contact us</div>
+            <div class="mt-24 contact-button text-sm text-center py-4 px-5 bg-[#FF5800] rounded-full w-fit hover:bg-black hover:text-white transition-all duration-300 ">Contact us</div>
         </div>
         <div class="footertext">
             <p>this is your team of brand experts,</p>
@@ -59,7 +59,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    background-color: white;
+    background-color: #E7E7D6;
     color: black;
 }
 
@@ -173,7 +173,6 @@ gsap.to(".page6", {
         start: "top 10%",
         end: "bottom -200",
         scrub: 1,
-        markers: true
  
     },
 });
