--- a/src/components/HeroLastPage.astro
+++ b/src/components/HeroLastPage.astro
@@ -2,7 +2,7 @@
 // PinnedScroll.astro
 ---
   
-<div class="container">
+<div class="container-box">
     <div class="pinned-section relative" id="pinnedSection">
         <div class="flex flex-col items-center justify-center ">
             <p class="font-mediaan text-4xl leading-none">Lets connect</p>
@@ -43,7 +43,7 @@
     .font-mediaan{
         font-family: "MediaanItalic";
     }
-    .container {
+    .container-box {
         height: 200vh; /* Make the container tall enough to scroll */
         background-color: #E7E7D6;
         position: relative;
