--- a/src/components/STackingCardsNew.astro
+++ b/src/components/STackingCardsNew.astro
@@ -4,35 +4,21 @@ import * as Icon from '@astropub/icons'
 ---
 
 
-<div class="container bg-[#E7E7D6]">
+<div class="container-box bg-[#E7E7D6]">
 
     <section class="hero pinned">
-        <h1>We Design <br />Experiences</h1>
+        <h1>We Automate <br />Custom Experience</h1>
     </section>
 
     <section class="card pinned">
         <div class="img">
-            <div class="card-content w-full h-full flex items-center justify-center bg-[#1E1E1D] rounded-tr-[100px] rounded-bl-[100px] overflow-hidden">
-                <div class="w-[50%] flex-col flex items-start justify-start ps-12">
-                    <span class=" akira text-[2rem] mt-2 new leading-[1] text-white">You have a vision but need one expert team to bring it to life ?</span>
-                    <div class=" px-[2px] py-[2px] rounded-full bg-white mt-10"><Icon.ChevronDown size={40} color="black"/></div>
+            <div class="card-content w-full h-full flex md:flex-row flex-col items-center justify-center bg-[#1E1E1D] rounded-tr-[50px] md:rounded-tr-[100px] rounded-bl-[50px] md:rounded-bl-[100px] overflow-hidden">
+                <div class="md:w-[50%] w-full h-full md:h-fit flex-col flex items-start justify-center md:justify-start md:ps-12 p-6">
+                    <span class="akira md:text-[2rem] text-xl mt-2 new leading-[1] text-white">You have a vision but need one expert team to bring it to life ?</span>
+                    <div class="px-1 md:px-[2px] py-[1px] md:py-[2px] rounded-full bg-white mt-6 md:mt-10"><Icon.ChevronDown size={40} color="black"/></div>
                 </div>
-                <div class="w-[50%] h-full flex items-center justify-center ps-8">
-                    <img class="w-[100%] h-[100%] object-cover" src="/public/assets/second-card.png" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
-    
-    <section class="card pinned">
-        <div class="img">
-            <div class="card-content w-full h-full flex items-center justify-center bg-[#1E1E1D] rounded-tr-[100px] rounded-bl-[100px] overflow-hidden">
-                <div class="w-[50%] flex-col flex items-start justify-start ps-12">
-                    <span class=" akira text-[2rem] mt-2 new leading-[1] text-white">You have a vision but need one expert team to bring it to life ?</span>
-                    <div class=" px-[2px] py-[2px] rounded-full bg-white mt-10"><Icon.ChevronDown size={40} color="black"/></div>
-                </div>
-                <div class="w-[50%] h-full flex items-center justify-center ps-8">
-                    <img class="w-[100%] h-[100%] object-cover" src="/public/assets/second-card.png" alt="">
+                <div class="md:w-[50%] w-full md:h-full flex items-center justify-center md:ps-8">
+                    <img class="w-full h-full object-cover" src="/public/assets/second-card.png" alt="">
                 </div>
             </div>
         </div>
@@ -40,13 +26,27 @@ import * as Icon from '@astropub/icons'
     
     <section class="card pinned">
         <div class="img">
-            <div class="card-content w-full h-full flex items-center justify-center bg-[#1E1E1D] rounded-tr-[100px] rounded-bl-[100px] overflow-hidden">
-            <div class="w-[50%] flex-col flex items-start justify-start ps-12">
-                <span class=" akira text-[2rem] mt-2 new leading-[1] text-white">You have a vision but need one expert team to bring it to life ?</span>
-                    <div class=" px-[2px] py-[2px] rounded-full bg-white mt-10"><Icon.ChevronDown size={40} color="black"/></div>
+            <div class="card-content w-full h-full flex md:flex-row flex-col items-center justify-center bg-[#1E1E1D] rounded-tr-[100px] rounded-bl-[100px] overflow-hidden">
+                <div class="md:w-[50%] w-full flex-col flex items-start justify-start md:ps-12 p-6">
+                    <span class="akira md:text-[2rem] text-xl mt-2 new leading-[1] text-white">You have a vision but need one expert team to bring it to life ?</span>
+                    <div class="px-[2px] py-[2px] rounded-full bg-white mt-10"><Icon.ChevronDown size={40} color="black"/></div>
                 </div>
-                <div class="w-[50%] h-full flex items-center justify-center ps-8">
-                    <img class="w-[100%] h-[100%] object-cover" src="/public/assets/second-card.png" alt="">
+                <div class="md:w-[50%] w-full h-full flex items-center justify-center md:ps-8">
+                    <img class="w-full h-full object-cover" src="/public/assets/second-card.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section class="card pinned">
+        <div class="img">
+            <div class="card-content w-full h-full flex md:flex-row flex-col items-center justify-center bg-[#1E1E1D] rounded-tr-[100px] rounded-bl-[100px] overflow-hidden">
+            <div class="md:w-[50%] w-full flex-col flex items-start justify-start md:ps-12 p-6">
+                <span class="akira md:text-[2rem] text-xl mt-2 new leading-[1] text-white">You have a vision but need one expert team to bring it to life ?</span>
+                    <div class="px-[2px] py-[2px] rounded-full bg-white mt-10"><Icon.ChevronDown size={40} color="black"/></div>
+                </div>
+                <div class="md:w-[50%] w-full h-full flex items-center justify-center md:ps-8">
+                    <img class="w-full h-full object-cover" src="/public/assets/second-card.png" alt="">
                 </div>
             </div>
         </div>
@@ -84,7 +84,7 @@ import * as Icon from '@astropub/icons'
         object-fit: cover;
     }
 
-    .container {
+    .container-box {
         width: 100%;
         height: 100%;
     }
@@ -140,8 +140,12 @@ import * as Icon from '@astropub/icons'
 
     @media screen and (max-width: 768px) {
         .img {
-            width: 300px;
-            height: 500px;
+            width: 90%;
+            height: 80vh;
+        }
+        
+        .hero h1 {
+            font-size: 3rem;
         }
     }
 
