--- a/src/components/Stats.astro
+++ b/src/components/Stats.astro
@@ -1,64 +1,64 @@
 ---
 ---
 
-<div class="w-screen h-full my-20 bg-[#FBF8F4] ">
+<div class="w-screen h-full my-20 bg-[e7e7d6] ">
     <div class="w-full h-full flex items-center justify-start">
-        <p class="w-[60%] font-new font-semibold stretch text-[3rem] ps-16 leading-none">
+        <p class="w-full md:w-[60%] font-new font-semibold stretch text-[1.5rem] md:text-[3rem] ps-2 md:ps-16 leading-none">
             Results That Speak: Achieve lasting impressions with our superior usability and aesthetics.
         </p>
     </div>  
-    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-[#FBF8F4] ">
-        <div class="w-full h-[15rem] relative bar">
-            <div class="absolute w-[45%] h-[11rem] bg-black z-10 black"></div>
-            <div class="absolute w-[94%] h-[11rem] bg-[#D2FF56] rounded-r-[3rem] green flex items-center justify-end pe-10 font-new font-semibold stretch text-[3rem] leading-none stretch">108%</div>
+    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-[e7e7d6] ">
+        <div class="w-full lg:h-[15rem] h-[4rem] relative bar">
+            <div class="absolute w-[15%] lg:w-[45%] lg:h-[11rem] h-[2rem] bg-black z-10 black"></div>
+            <div class="absolute w-[94%] lg:h-[11rem] h-[2rem] bg-[#FF6D00] rounded-r-[10px] lg:rounded-r-[3rem] green flex items-center justify-end pe-4 lg:pe-10 font-new font-semibold stretch lg:text-[3rem] text-[1rem] leading-none stretch">108%</div>
         </div>
         <div class="w-full flex flex-col order-2 items-start justify-center gap-4">
-            <p class="font-new font-semibold stretch text-[2rem] ps-16 leading-none">
+            <p class="font-new font-semibold stretch text-[1.5rem] md:text-[2rem] ps-2 md:ps-16 leading-none">
                 Engagement and layout 
             </p>
-            <p class="w-[40%] font-new font-normal stretch text-[1rem] ps-16 leading-1">
+            <p class="w-[80%] lg:w-[40%] font-new font-normal stretch text-[1rem] ps-2 md:ps-16 leading-1">
                 We captivate users from the first interaction with a flawless user experience. It's not just about functionality; it's about creating an experience users love. They'll remember, talk about, and share your brand, turning customers into loyal advocates.
             </p>
         </div>
     </div>
-    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-[#FBF8F4] ">
-        <div class="w-full h-[15rem] relative bar">
-            <div class="absolute w-[15%] h-[11rem] bg-black z-10 black"></div>
-            <div class="absolute w-[94%] h-[11rem] bg-[#D2FF56] rounded-r-[3rem] green flex items-center justify-end pe-10 font-new font-semibold stretch text-[3rem] leading-none stretch">81%</div>
+    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-[e7e7d6] ">
+        <div class="w-full lg:h-[15rem] h-[4rem] relative bar">
+            <div class="absolute w-[25%] lg:w-[45%] lg:h-[11rem] h-[2rem] bg-black z-10 black"></div>
+            <div class="absolute w-[94%] lg:h-[11rem] h-[2rem] bg-[#FF6D00] rounded-r-[10px] lg:rounded-r-[3rem] green flex items-center justify-end pe-4 lg:pe-10 font-new font-semibold stretch lg:text-[3rem] text-[1rem] leading-none stretch">81%</div>
         </div>
         <div class="w-full flex flex-col order-2 items-start justify-center gap-4">
-            <p class="font-new font-semibold stretch text-[2rem] ps-16 leading-none">
+            <p class="font-new font-semibold stretch text-[1.5rem] md:text-[2rem] ps-2 md:ps-16 leading-none">
                 Ease of use
             </p>
-            <p class="w-[40%] font-new font-normal stretch text-[1rem] ps-16 leading-1">
+            <p class="w-[80%] lg:w-[40%] font-new font-normal stretch text-[1rem] ps-2 md:ps-16 leading-1">
                 Our designs eliminate the need for complex tutorials and lengthy demos. Users will love your product from the first use because it's intuitive and effortless. We create interfaces that are beautiful and easy to navigate, enhancing user satisfaction and retention.
             </p>
         </div>
     </div>
-    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-[#FBF8F4] ">
-        <div class="w-full h-[15rem] relative bar">
-            <div class="absolute w-[35%] h-[11rem] bg-black z-10 black"></div>
-            <div class="absolute w-[94%] h-[11rem] bg-[#D2FF56] rounded-r-[3rem] green flex items-center justify-end pe-10 font-new font-semibold stretch text-[3rem] leading-none stretch">3-4 x</div>
+    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-[e7e7d6] ">
+        <div class="w-full lg:h-[15rem] h-[4rem] relative bar">
+            <div class="absolute w-[35%] lg:w-[45%] lg:h-[11rem] h-[2rem] bg-black z-10 black"></div>
+            <div class="absolute w-[94%] lg:h-[11rem] h-[2rem] bg-[#FF6D00] rounded-r-[10px] lg:rounded-r-[3rem] green flex items-center justify-end pe-4 lg:pe-10 font-new font-semibold stretch lg:text-[3rem] text-[1rem] leading-none stretch">3-4 x</div>
         </div>
         <div class="w-full flex flex-col order-2 items-start justify-center gap-4">
-            <p class="font-new font-semibold stretch text-[2rem] ps-16 leading-none">
+            <p class="font-new font-semibold stretch text-[1.5rem] md:text-[2rem] ps-2 md:ps-16 leading-none">
                 Speed and efficiency 
             </p>
-            <p class="w-[40%] font-new font-normal stretch text-[1rem] ps-16 leading-1">
+            <p class="w-[80%] lg:w-[40%] font-new font-normal stretch text-[1rem] ps-2 md:ps-16 leading-1">
                 Fast, efficient, and smooth—our designs streamline user interactions, making every second count. A seamless experience reduces friction, leading to quicker adoption and happier customers.
             </p>
         </div>
     </div>
-    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-[#FBF8F4] ">
-        <div class="w-full h-[15rem] relative bar">
-            <div class="absolute w-[25%] h-[11rem] bg-black z-10 black"></div>
-            <div class="absolute w-[94%] h-[11rem] bg-[#D2FF56] rounded-r-[3rem] green flex items-center justify-end pe-10 font-new font-semibold stretch text-[3rem] leading-none stretch">3-4 x</div>
+    <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-[e7e7d6] ">
+        <div class="w-full lg:h-[15rem] h-[4rem] relative bar">
+            <div class="absolute w-[25%] lg:w-[45%] lg:h-[11rem] h-[2rem] bg-black z-10 black"></div>
+            <div class="absolute w-[94%] lg:h-[11rem] h-[2rem] bg-[#FF6D00] rounded-r-[10px] lg:rounded-r-[3rem] green flex items-center justify-end pe-4 lg:pe-10 font-new font-semibold stretch lg:text-[3rem] text-[1rem] leading-none stretch">3-4 x</div>
         </div>
         <div class="w-full flex flex-col order-2 items-start justify-center gap-4">
-            <p class="font-new font-semibold stretch text-[2rem] ps-16 leading-none">
+            <p class="font-new font-semibold stretch text-[1.5rem] md:text-[2rem] ps-2 md:ps-16 leading-none">
                 Memorable and shareable
             </p>
-            <p class="w-[40%] font-new font-normal stretch text-[1rem] ps-16 leading-1">
+            <p class="w-[80%] lg:w-[40%] font-new font-normal stretch text-[1rem] ps-2 md:ps-16 leading-1">
                 A great experience makes your product memorable and shareable. Our standout designs spark conversation and pride, driving organic growth through word-of-mouth.
             </p>
         </div>
