--- a/src/components/marquee.astro
+++ b/src/components/marquee.astro
@@ -90,7 +90,7 @@
   ---
   
   <div class="marquee-container">
-    <p class="ps-20 font-semibold">Trusted by:</p>
+    <p class="ps-4 lg:ps-20 font-semibold">Trusted by:</p>
     <div class="marquee" id="marquee">
       
       {[...Array(repetitions)].map(() => (
@@ -153,7 +153,7 @@
   <style>
     .marquee-container {
       overflow: hidden;
-      background-color: #FBF8F4;
+      background-color: #E7E7D6;
       padding: 0.5rem 0;
       font-family: 'new';
       font-weight: 800;
