--- a/src/components/ProductCard.astro
+++ b/src/components/ProductCard.astro
@@ -25,14 +25,16 @@ const services = [
 ---
 
 <div class="service-cards">
-  <div class="flex flex-col items-start justify-center max-w-[700px] px-10 mb-20">
-    <div class="flex items-center justify-center gap-2 new">
-      <img src={astrix.src} alt="astrix" class="w-8 h-8 astrix "  />
-      <p class="animated-text">Create something amazing from the start.</p>
+  <div class="flex flex-col items-start justify-center gap-0 max-w-[700px] ps-2 lg:px-10 mb-20">
+    <div class="flex md:flex-row flex-col items-start md:items-center justify-center gap-4 lg:gap-2 new">
+      <svg class="rotating-asterisk" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M12.311 30.7873V21.195L3.95649 25.9911L0.862207 20.6535L9.21676 15.8574L0.862207 11.0612L3.95649 5.64626L12.311 10.4424V0.850127H18.577V10.4424L26.8541 5.64626L30.0258 11.0612L21.6712 15.8574L30.0258 20.6535L26.8541 25.9911L18.577 21.2724V30.7873H12.311Z" fill="black"></path>
+      </svg>
+      <p class="animated-text ">Create something amazing from the start.</p>
     </div>
-    <p class=" new animated-text">We handle everything from branding to product development, transforming your vision into a thriving business. Using data-driven insights and creative innovation, we build cohesive, scalable solutions.</p>
+    <p class=" new animated-text ">We handle everything from branding to product development, transforming your vision into a thriving business. Using data-driven insights and creative innovation, we build cohesive, scalable solutions.</p>
   </div>
-  <div class="flex items-start justify-around">
+  <div class="flex md:flex-row flex-col items-start justify-around">
   {services.map(service => (
     <div class="card">
       <div class="card-content px-8 py-4 overflow-hidden">
@@ -57,12 +59,25 @@ const services = [
     font-stretch: 450%;
     line-height: 1;
   }
+
+  @media (max-width: 768px) {
+    .new{
+      font-size: 1.5rem;
+    }
+  }
   .service-cards {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     gap: 2rem;
     padding: 2rem;
+  }
+
+  @media (max-width: 768px) {
+    .service-cards {
+      padding:1rem 0;
+      gap: 2rem;
+    }
   }
 
   .card {
@@ -80,9 +95,23 @@ const services = [
     border-top-left-radius: 80px;
   }
 
+  @media (max-width: 768px) {
+    .card {
+      width: 100%;
+      margin-bottom: 2rem;
+      border-radius: 50px;
+    }
+  }
+
   .card h2 {
     font-size: 1.5rem;
     margin-bottom: 1rem;
+  }
+
+  @media (max-width: 768px) {
+    .card h2 {
+      margin-bottom: 2rem;
+    }
   }
 
   .card p {
