--- a/src/pages/products/index.astro
+++ b/src/pages/products/index.astro
@@ -11,40 +11,43 @@ import Pricing from "../../components/Pricing.astro";
 import Navbar from "../../components/Navbar.astro";
 import Footer from "../../components/Footer.astro";
 import CompareProducts from "../../components/CompareProducts.astro";
+import BrandFeatures from "../../components/BrandFeatures.astro";
+import Navbar2 from "../../components/Navbar2.astro";
+import StatisticsGrid from "../../components/StatisticsGrid.astro";
 ---
 <Layout title="CX-Point">
-<div class="w-full h-full bg-[#FBF8F4] ">
-    <Navbar/>
-    <div class="w-full h-screen flex flex-col justify-evenly px-20 pt-20">
+<div class="w-full h-full bg-[#E7E7D6] ">
+    <Navbar2/>
+    <div class="w-full h-screen flex flex-col justify-evenly px-4 pt-40 lg:px-20 lg:pt-20">
         <div>
-            <div class="w-full flex items-center gap-4">
-                <img class="w-[60px] h-[60px] astrix"src={astrix} alt="astrix" />
+            <div class="w-full flex items-center gap-2 lg:gap-4">
+                <img class="w-[20px] h-[20px] lg:w-[60px] lg:h-[60px] astrix"src={astrix} alt="astrix" />
                 <div class="w-full h-full overflow-hidden">
-                    <p class="text-[80px] akira animated-text ">Success-Driven Stories</p>
+                    <p class="text-[25px] lg:text-[80px] akira animated-text ">Success-Driven Stories</p>
                 </div>
             </div>
             <div class="w-full ">
                 <div class="w-full h-full overflow-hidden">
-                    <p class="text-[80px] akira animated-text"> for Ambitious leaders</p>
+                    <p class="text-[25px] lg:text-[80px] akira animated-text"> for Ambitious leaders</p>
                 </div>
             </div>
-            <div class="w-full h-full overflow-hidden">
+            <div class="w-full h-full hidden lg:flex overflow-hidden">
                 <p class="text-[20px] akira mt-4 animated-text">We design <span class="px-4 py-2 rounded-full border-2 border-black text-black median mx-2">Experiences</span> that transform visions into thriving businesses </p>
             </div>
         </div>
         <div>
-            <div class="w-full h-full overflow-hidden flex items-start justify-between gap-10 rounded-2xl  py-5">
-                <div class="w-[40%] h-[200px] bg-[#2476FF] rounded-tr-3xl rounded-bl-3xl px-10 animated-text overflow-hidden">
+            <div class="w-full h-full overflow-hidden flex flex-col lg:flex-row items-start justify-between gap-10 rounded-2xl pt-8 lg:pt-0 lg:py-5">
+                <div class="w-full lg:w-[40%] h-[200px] rounded-tr-3xl rounded-bl-3xl px-10 animated-text overflow-hidden">
                     <!-- <video autoplay muted loop src={video} class="w-full h-full object-cover scale-150"></video> -->
-                     
+                     <img src="/assets/Mockup-1.jpg" alt="mockup" class="w-full h-full object-cover scale-150">
                 </div>
-                <div class="w-[60%] h-full flex flex-col justify-between">
+                <div class="lg:w-[60%] h-full flex flex-col justify-center gap-4 lg:gap-0 lg:justify-between">
                     <div class="w-full h-fulloverflow-hidden ">
-                        <p class="median text-right text-[17px] animated-text text-black">
+                        <p class="median text-center lg:text-right text-[17px] animated-text text-black">
                             At CXpoint, we offer innovative tools designed to enhance customer experience for organizations of all sizes. Our solutions empower businesses to connect more effectively with their customers, fostering loyalty and satisfaction. By streamlining interactions and gathering valuable insights, CXpoint helps you elevate your customer experience to new heights.  
                         </p>
                     </div>
-                    <div class="w-full h-full flex items-end justify-end">
+                    <div class="w-full h-fit lg:h-full flex items-end justify-center lg:justify-end">
 
                         <p class=" text-[20px] median animated-text flex items-end px-4 py-2 border-2 border-black rounded-full">Learn More</p>
                         
@@ -53,12 +56,14 @@ import CompareProducts from "../../components/CompareProducts.astro";
             </div>
         </div>
     </div>
-    <StackingCards />
+    <StatisticsGrid />
+    <!-- <StackingCards /> -->
     <ProductCard />
     <ProductSections/>
-    
+
     <Stats />
-    <CompareProducts/>
+    <BrandFeatures/>
+    <!-- <CompareProducts/> -->
     <CTAPage />
     <Pricing />
     <Footer/>
