--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -6,10 +6,11 @@ import CTAPage from "../../components/CTAPage.astro";
 import Navbar from "../../components/Navbar.astro";
 import HeroSixthPage from "../../components/HeroSixthPage.astro";
 import Footer from "../../components/Footer.astro";
+import Navbar2 from "../../components/Navbar2.astro";
 ---
 <Layout title="CX-Point">
-<div class="w-full min-h-screen bg-[#FBF8F4]">
-    <Navbar/>
+<div class="w-full min-h-screen bg-[#E7E7D6]">
+    <Navbar2/>
     <!-- <div class="w-full h-[90vh] flex flex-col justify-start pt-40 px-20 pb-20">
         <div>
             <div class="w-full flex items-center gap-4">
@@ -41,7 +42,7 @@ import Footer from "../../components/Footer.astro";
             </div>
         </div>
         <div class="w-[30%] flex flex-col items-start justify-end"> 
-            <div class="w-24 h-2 bg-black mt-14 mb-6 dash"></div>
+            <div class="w-48 h-4 bg-[#FF5800] mt-14 mb-6 dash"></div>
             <div class="w-full h-full font-semibold leading-none subtext">
               The supply chains we need, the special effects that wow, the stadiums we fill, the food we eat, the
               clothes we wear, the cars we drive, the homes where we live, the holidays we take, the trees we
@@ -195,12 +196,12 @@ import { ScrollTrigger } from 'gsap/ScrollTrigger';
         ease: "power2.out"
     },"anim")
 
-    t1.to(".dash",{
-        width:200,
-        duration: 2.5,
-        yoyo: true,
-        repeat: -1,
-        ease: "power2.inOut"
-    })
+    // t1.to(".dash",{
+    //     width:200,
+    //     duration: 2.5,
+    //     yoyo: true,
+    //     repeat: -1,
+    //     ease: "power2.inOut"
+    // })
 
 </script>
